--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <div>
   <h3><%= @user.name %></h3>
+  <h3><%= @user.introduction %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
 </div>
 
@@ -9,8 +10,7 @@
     <%= image_tag book.get_image %>
   <% end %>
   <p>投稿ユーザー画像：<%= image_tag book.user.get_profile_image(100,100) %></p>
-  <p>ショップ名：<%= post_image.shop_name %></p>
-  <p>説明：<%= post_image.caption %></p>
-  <p>ユーザーネーム：<%= post_image.user.name %></p>
+  <p>本のタイトル：<%= book.title %></p>
+  <p>感想：<%= book.body %></p>
 </div>
 <% end %>
