--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<div class = "col-md-8 offset-md-1">
+          <h2 class = "mt-3">New book</h2>
+          <%= form_with model: @book do |f| %>
+           <div class = "form-group">
+             <label for = "book_title">Title</label>
+              <%= f.text_field :title %>
+           </div>
+           <div class = "form-group">
+             <label for = "book_opinion">Opinion</label>
+              <%= f.text_area :body %>
+           </div>
+           <div class = "form-group">
+            <%= f.submit 'Create Book', class: "btn btn-success" %>
+           </div>
+           <% end %>
+        </div>
