--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -48,7 +48,11 @@
             <tbody>
               <% @books.each do |book| %>
                <tr>
-                 <td><%= image_tag book.get_image %></td>
+                 <td>
+                   <%= link_to book_path(book.id) do %>
+                      <%= image_tag book.get_image %>
+                     <% end %>
+                 </td>
                  <td><%= link_to book.title %></td>
                  <td><%= book.body %></td>
                </tr>
