--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,60 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<main>
+  <p id = "notice">You have created book successfully.</p>
+  <div class = "container px-5 px-sm-0">
+    <div class = "row">
+      <div class = "col-md-3">
+        <h2>User info</h2>
+        <table class = "table">
+          <tbody>
+            <tr></tr>
+            <tr>
+              <th>name</th>
+              <th></th>
+            </tr>
+            <tr>
+              <th>introduction</th>
+              <th></th>
+            </tr>
+          </tbody>
+        </table>
+        <div class = "row">
+        </div>
+          <h2 class = "mt-3">New book</h2>
+          <%= form_with model: @book do |f| %>
+           <div class = "form-group">
+             <label for = "book_title">Title</label>
+              <%= f.text_field :title, class: "form-control book_title" %>
+           </div>
+           <div class = "form-group">
+             <label for = "book_opinion">Opinion</label>
+              <%= f.text_area :body, class: "form-control book_body" %>
+           </div>
+           <div class = "form-group">
+            <%= f.submit 'Create Book', class: "btn btn-success" %>
+           </div>
+           <% end %>
+      </div>
+      <div class = "col-md-8 pffset-md-1">
+        <h2>Book detail</h2>
+        <table class = "table">
+          <tbody>
+            <tr>
+              <td>
+                <%= link_to book_path(@book.id) do %>
+                <%= image_tag 'no_image.jpg' %>
+                <% end %>
+                <br><%= link_to @book.user.name %>
+              </td>
+              <td><%= link_to @book.title %></td>
+              <td><%= @book.body %></td>
+              <td></td>
+              <td>
+                <% if @book.user == current_user %>
+                 <%= link_to "Destroy", book_path(@book), method: :delete,"data-confirm" => "本当に消しますか？", class:"btn btn-sm btn-danger" %>
+                <% end %>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+</main>
