--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -48,12 +48,8 @@
             <tbody>
               <% @books.each do |book| %>
                <tr>
-                 <td>
-                   <%= link_to book_path(book.id) do %>
-                      <%= image_tag book.get_image %>
-                     <% end %>
-                 </td>
-                 <td><%= link_to book.title %></td>
+                 <td><%= image_tag book.user.get_profile_image(100,100) %></td>
+                 <td><%= book.title %></td>
                  <td><%= book.body %></td>
                </tr>
               <% end %>
