--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,18 +6,21 @@
         <h2>User info</h2>
         <table class = "table">
           <tbody>
-            <tr></tr>
+            <tr><%= image_tag @user.get_profile_image(100,100) %></tr>
             <tr>
               <th>name</th>
-              <th></th>
+              <th><%= @user.name %></th>
             </tr>
             <tr>
               <th>introduction</th>
-              <th></th>
+              <th><%= @user.introduction %></th>
             </tr>
           </tbody>
         </table>
         <div class = "row">
+          <%= link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
+           <i class="fas fa-user-cog"></i>
+          <% end %>
         </div>
           <h2 class = "mt-3">New book</h2>
           <%= form_with model: @book do |f| %>
