--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -48,8 +48,10 @@
             <tbody>
               <% @books.each do |book| %>
                <tr>
-                 <td><%= image_tag book.user.get_profile_image(100,100) %></td>
-                 <td><%= book.title %></td>
+                 <td>
+                   <%= link_to image_tag book.user.get_profile_image(100,100) %>
+                   </td>
+                 <td><%=link_to book.title, book_path(book.id) %></td>
                  <td><%= book.body %></td>
                </tr>
               <% end %>
