--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -45,7 +45,11 @@
               </td>
               <td><%= link_to @book.title %></td>
               <td><%= @book.body %></td>
-              <td></td>
+              <td>
+                <% if @book.user == current_user %>
+                 <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
+                <% end %>
+              </td>
               <td>
                 <% if @book.user == current_user %>
                  <%= link_to "Destroy", book_path(@book), method: :delete,"data-confirm" => "本当に消しますか？", class:"btn btn-sm btn-danger" %>
