--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <main>
-  <p id = "notice"></p>
+  <p id = "notice">You have updated user successfully.</p>
   <div class = "container px-5 px-sm-0">
     <div class = "row">
       <div class = "col-md-3">
@@ -52,8 +52,11 @@
               <% @books.each do |book| %>
               <tr>
                <td>
+                 <%= link_to user_path(@user.id) do %>
+                  <% image_tag @user.get_profile_image(80,80) %>
+                 <% end %>
                </td>
-               <td><%= book.title %></td>
+               <td><%= link_to book.title, book_path(book.id) %></td>
                <td><%= book.body %></td>
               </tr>
               <% end %>
