--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,14 @@
 <main>
-  <p id = "notice"></p>
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %>errors prohibited this obj from being saved:
+    <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  <% end %>
+
+  <p id = "notice"><%= flash[:notice] %></p>
   <div class = "container px-5 px-sm-0">
     <div class = "row">
       <div class = "col-md-3">
@@ -20,6 +29,7 @@
         <div class = "row">
         </div>
           <h2 class = "mt-3">New book</h2>
+
           <%= form_with model: @book do |f| %>
            <div class = "form-group">
              <label for = "book_title">Title</label>
