--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,49 +1,13 @@
 <main>
-  <% if @book.errors.any? %>
-    <%= @book.errors.count %>errors prohibited this obj from being saved:
-    <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  <% end %>
-
   <p id = "notice"><%= flash[:notice] %></p>
   <div class = "container px-5 px-sm-0">
+    <%= render 'books/error', model: @book %>
     <div class = "row">
       <div class = "col-md-3">
-        <h2>User info</h2>
-        <table class = "table">
-          <tbody>
-            <tr></tr>
-            <tr>
-              <th>name</th>
-              <th></th>
-            </tr>
-            <tr>
-              <th>introduction</th>
-              <th></th>
-            </tr>
-          </tbody>
-        </table>
-        <div class = "row">
-        </div>
-          <h2 class = "mt-3">New book</h2>
+        <%= render 'users/user', user: @user %>
 
-          <%= form_with model: @book do |f| %>
-           <div class = "form-group">
-             <label for = "book_title">Title</label>
-              <%= f.text_field :title, class: "form-control book_title" %>
-           </div>
-           <div class = "form-group">
-             <label for = "book_opinion">Opinion</label>
-              <%= f.text_area :body, class: "form-control book_body" %>
-           </div>
-           <div class = "form-group">
-            <%= f.submit 'Create Book', class: "btn btn-success" %>
-           </div>
-           <% end %>
-      </div>
+        <%= render 'books/book', book: @book %>
+
         <div class = "col-md-8 offset-md-1">
           <h2>Books</h2>
           <table class = "table table-hover table-inverse">
@@ -59,8 +23,10 @@
               <% @books.each do |book| %>
                <tr>
                  <td>
-                   <%= link_to image_tag book.user.get_profile_image(100,100) %>
-                   </td>
+                   <%= link_to user_path(@user.id) do %>
+                    <%= image_tag book.user.get_profile_image(100,100) %>
+                   <% end %>
+                  </td>
                  <td><%=link_to book.title, book_path(book.id) %></td>
                  <td><%= book.body %></td>
                </tr>
