--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,47 +1,22 @@
 <main>
   <p id = "notice"><%= flash[:notice] %></p>
-  <div class = "container px-5 px-sm-0">
+  <div class = "container">
     <div class = "row">
       <div class = "col-md-3">
-        <h2>User info</h2>
-        <table class = "table">
-          <tbody>
-            <tr></tr>
-            <tr>
-              <th>name</th>
-              <th></th>
-            </tr>
-            <tr>
-              <th>introduction</th>
-              <th></th>
-            </tr>
-          </tbody>
-        </table>
-        <div class = "row">
-        </div>
-          <h2 class = "mt-3">New book</h2>
-          <%= form_with model: @book do |f| %>
-           <div class = "form-group">
-             <label for = "book_title">Title</label>
-              <%= f.text_field :title, class: "form-control book_title" %>
-           </div>
-           <div class = "form-group">
-             <label for = "book_opinion">Opinion</label>
-              <%= f.text_area :body, class: "form-control book_body" %>
-           </div>
-           <div class = "form-group">
-            <%= f.submit 'Create Book', class: "btn btn-success" %>
-           </div>
-           <% end %>
-      </div>
-      <div class = "col-md-8 pffset-md-1">
-        <h2>Book detail</h2>
-        <table class = "table">
+        <%= render 'users/user', user: @user %>
+
+        <%= render 'books/book', book: @newbook %>
+
+        <div class = "col-md-8 offset-md-1">
+         <h2>Book detail</h2>
+         <table class = "table">
           <tbody>
             <tr>
               <td>
-                <%= image_tag @book.user.get_profile_image(100,100) %>
-                <br><%= link_to @book.user.name %>
+                <%= link_to user_path(@user.id) do %>
+                 <%= image_tag @book.user.get_profile_image(100,100) %>
+                <br><%= @book.user.name %>
+                <% end %>
               </td>
               <td><%= link_to @book.title %></td>
               <td><%= @book.body %></td>
@@ -59,4 +34,7 @@
           </tbody>
         </table>
       </div>
+     </div>
+    </div>
+  </div>
 </main>
