--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,37 +3,10 @@
   <div class = "container px-5 px-sm-0">
     <div class = "row">
       <div class = "col-md-3">
-        <h2>User info</h2>
-        <table class = "table">
-          <tbody>
-            <tr></tr>
-            <tr>
-              <th>name</th>
-              <th></th>
-            </tr>
-            <tr>
-              <th>introduction</th>
-              <th></th>
-            </tr>
-          </tbody>
-        </table>
-        <div class = "row">
-        </div>
-          <h2 class = "mt-3">New book</h2>
-          <%= form_with model: @book do |f| %>
-           <div class = "form-group">
-             <label for = "book_title">Title</label>
-              <%= f.text_field :title, class: "form-control book_title" %>
-           </div>
-           <div class = "form-group">
-             <label for = "book_opinion">Opinion</label>
-              <%= f.text_area :body, class: "form-control book_body" %>
-           </div>
-           <div class = "form-group">
-            <%= f.submit 'Create Book', class: "btn btn-success" %>
-           </div>
-           <% end %>
-      </div>
+        <%= render 'users/user', user: @user %>
+
+        <%= render 'books/book', book: @book %>
+
       <div class = "col-md-8 offset-md-1">
         <h2>Users</h2>
         <table class = "table">
@@ -47,7 +20,11 @@
           <tbody>
             <% @users.each do |user| %>
             <tr>
-              <td><%= image_tag user.get_profile_image(100,100) %></td>
+              <td>
+                <%= link_to user_path(@user.id) do %>
+                 <%= image_tag @user.get_profile_image(100,100) %>
+                <% end %>
+              </td>
               <td><%= user.name %></td>
               <td><%= link_to "Show", user_path(user.id) %></td>
             </tr>
