--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,40 +3,10 @@
   <div class = "container px-5 px-sm-0">
     <div class = "row">
       <div class = "col-md-3">
-        <h2>User info</h2>
-        <table class = "table">
-          <tbody>
-            <tr><%= image_tag @user.get_profile_image(100,100) %></tr>
-            <tr>
-              <th>name</th>
-              <th><%= @user.name %></th>
-            </tr>
-            <tr>
-              <th>introduction</th>
-              <th><%= @user.introduction %></th>
-            </tr>
-          </tbody>
-        </table>
-        <div class = "row">
-          <%= link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
-           <i class="fas fa-user-cog"></i>
-          <% end %>
-        </div>
-          <h2 class = "mt-3">New book</h2>
-          <%= form_with model: @book do |f| %>
-           <div class = "form-group">
-             <label for = "book_title">Title</label>
-              <%= f.text_field :title, class: "form-control book_title" %>
-           </div>
-           <div class = "form-group">
-             <label for = "book_opinion">Opinion</label>
-              <%= f.text_area :body, class: "form-control book_body" %>
-           </div>
-           <div class = "form-group">
-            <%= f.submit 'Create Book', class: "btn btn-success" %>
-           </div>
-           <% end %>
-      </div>
+        <%= render 'users/user', user: @user %>
+
+        <%= render 'books/book', book: @book %>
+
       <div class = "col-md-8 offset-md-1">
         <h2>Books</h2>
           <table class = "table table-hover table-inverse">
@@ -53,7 +23,7 @@
               <tr>
                <td>
                  <%= link_to user_path(@user.id) do %>
-                  <% image_tag @user.get_profile_image(80,80) %>
+                  <%= image_tag book.user.get_profile_image(100,100) %>
                  <% end %>
                </td>
                <td><%= link_to book.title, book_path(book.id) %></td>
