--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,6 +5,14 @@
     <div class = "row">
       <div class = "col-md-3">
         <%= render 'users/user', user: @user %>
+        
+        <div class = "row">
+        <% if @user == current_user %>
+         <%= link_to edit_user_path(current_user), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fas fa-user-cog"></i>
+         <% end %>
+        <% end %>
+        </div>
 
         <%= render 'books/book', book: @book %>
 
@@ -23,7 +31,7 @@
               <% @books.each do |book| %>
                <tr>
                  <td>
-                   <%= link_to user_path(@user.id) do %>
+                   <%= link_to user_path(book.user.id) do %>
                     <%= image_tag book.user.get_profile_image(100,100) %>
                    <% end %>
                   </td>
