--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,6 +4,12 @@
     <div class = "row">
       <div class = "col-md-3">
         <%= render 'users/user', user: @user %>
+        
+        <div class = "row">
+         <%= link_to edit_user_path(@user.id), class: "btn btn-outline-secondary btn-block" do %>
+          <i class="fas fa-user-cog"></i>
+         <% end %>
+        </div>
 
         <%= render 'books/book', book: @newbook %>
 
